fix: 修改登出接口，删除cookie